@@ -1,3 +1,9 @@
+Mon May 23 07:10:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/APG/Naming/Name_Binding.h:
+        * netsvcs/lib/Client_Logging_Handler.cpp:
+          Fixed incorrect delete
+
 Mon May 23 06:55:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/APG/Streams/MessageInfo.h:
